--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-REACT_APP_BACKEND_URL
-REACT_APP_EDEN_URL
+REACT_APP_BACKEND_URL=http://localhost:8080
+REACT_APP_EDEN_URL=https://api.edenai.run/v2/ocr/custom_document_parsing_async
 REACT_APP_EDEN_ACCESS_KEY
